--- a/README
+++ b/README
@@ -1,3 +1,22 @@
 # BPGMTC 2019 - public
 
-Public clone of the repository for the website of the British Postgraduate Model Theory Conference 2019.
+Public copy of the repository for the website of the British Postgraduate Model Theory Conference 2019.
+
+## Usage
+
+Open `output/index.html` directly, or serve it using the web server of your choice. You can also try the live version of the site [here](https://modeltheory.uk).
+
+## Build
+
+Use the shell build script by invoking `./build.sh` (this should work on POSIX systems as long as you have Elm in your path).
+You can use the site without a backend (with limited functionality), or change the test server URL in `API.elm` to point to the live version.
+Alternatively, you can use e.g. [Eve](http://docs.python-eve.org/en/latest/) to set up a REST backend of your own.
+
+## Contributing
+
+1. Fork it!
+2. Create your feature branch: `git checkout -b my-new-feature`
+3. Commit your changes: `git commit -am 'Add some feature'`
+4. Push to the branch: `git push origin my-new-feature`
+5. Submit a pull request.
+
